[metadata]
name = innolqb
version = file: version.txt
author = Makpar Innovation Lab
author_email = gmoore@makpar.com
description = a ORM model for AWS QLDB
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_file = LICENSE
platform = any
keywords = aws, qldb, quantum-ledger-database, orm 
classifers=
    Programming Language :: Python :: 3
    License:: GNU GPL v3
    Operating System :: OS Independent
project_urls =
    Documentation = https://github.com/Makpar-Innovation-Laboratory/innolqb
    Source = https://github.com/Makpar-Innovation-Laboratory/innolqb
    
[options]
python_requires = >= 3.8
package_dir=
    =innoldb
packages=find:
install_requires =
    amazon.ion >=0.9.1
    boto3 >=1.20.49
    pyqldb >=3.2.2
    python-dotenv >=0.19.2
include_package_data = True

[options.packages.find]
where=innoldb