[metadata]
name = innoldb
url = https://innolab-coverage.makpar-innovation.net
version = file: version.txt
author = Makpar Innovation Lab
author_email = gmoore@makpar.com
description = a ORM model for AWS QLDB
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_file = LICENSE
platform = any
keywords = aws, qldb, quantum-ledger-database, orm 
classifers=
    Programming Language :: Python :: 3
    License:: GNU GPL v3
    Operating System :: OS Independent
project_urls =
    Documentation = https://makpar-innovation-laboratory.github.io/innoldb/
    Source = https://github.com/Makpar-Innovation-Laboratory/innoldb
    
[options]
python_requires = >= 3.8
package_dir=
    =src
packages=find:
install_requires =
    jsonconversion >=0.2.13
    pyqldb >=3.2.2
    python-dotenv >=0.19.2
include_package_data = True

[options.entry_points]
console_scripts =
    innoldb = innoldb.main:entrypoint

[options.packages.find]
where=src